create dynamic row and column system

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html>
   <head>
   	<style type='text/css'>
-  		body * {display: block; margin: 0;}
+  		body * {display: block; margin: 0px;}
+  		body {display: block; margin: 0px;}
+  		.cell {float: left;}
   	</style>
   </head>
   <body>
