--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
   <head>
   	<style type='text/css'>
   		body * {display: block; margin: 0px;}
-  		body {display: block; margin: 0px;}
-  		.cell {float: left; background: rgba(0, 255, 255, 0.5);}
+  		body {display: block; margin: 0px; overflow: hidden;}
+  		.cell {float: left; background: url('http://image.shutterstock.com/display_pic_with_logo/953716/105690983/stock-vector-test-tv-screen-vector-background-105690983.jpg');}
   		.row {background: rgba(255, 0, 255, 0.5);}
   		.grid {background: rgba(255, 255, 0, 0.5);}
   	</style>
